install/mtls-stack/prometheus/prom-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: prometheus
  labels:
    name: prometheus
spec:
  containers:
  - name: prometheus
    args:
      - --config.file=/etc/prometheus/prometheus.yaml
    image: quay.io/prometheus/prometheus
    ports:
    - containerPort: 8080
    volumeMounts:
    - name: prom-mtls
      mountPath: /etc/prometheus/certs
    - name: prom-config
      mountPath: /etc/prometheus
  volumes:
    - name: prom-mtls
      configMap:
        name: prom-mtls
    - name: prom-config
      configMap:
        name: prom-config
