install/mtls-stack/prometheus/prom-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-svc
spec:
  selector:
    name: prometheus
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
