install/mtls-stack/prometheus/prom-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: prometheus
spec:
  to:
    kind: Service
    name: prometheus-svc
